--- a/src/sass/Products.scss
+++ b/src/sass/Products.scss
@@ -1,7 +1,20 @@
 .products-container {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
-	width: 1600px;
-	margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 1600px;
+  margin: 0 auto;
+  @media (max-width: 500px) {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  @media (max-width: 768px) {
+    display: flex;
+    flex-direction: row;
+    width: 100px;
+  }
+  @media (max-width: 1600px) {
+    margin: auto;
+  }
 }
